--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spellcheck-technical-word",
   "description": "spellcheck a text by using technical-word-rules.",
-  "version": "1.1.3",
+  "version": "1.1.2",
   "homepage": "https://github.com/azu/spellcheck-technical-word/",
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "structured-source": "^3.0.2",
-    "technical-word-rules": "^1.1.1"
+    "technical-word-rules": "git://github.com/azu/technical-word-rules"
   },
   "devDependencies": {
     "espower-loader": "^0.10.0",
